# intel--llvm

buildbot/: configure.py
clang/include/clang/Sema/: Attr.h  (+1 more)
clang/lib/Basic/: Diagnostic.cpp
clang/lib/CodeGen/: CodeGenFunction.cpp
clang/lib/Driver/: Driver.cpp  ToolChain.cpp
clang/lib/Headers/: sha512intrin.h
clang/lib/Sema/: SemaDecl.cpp  SemaDeclAttr.cpp
clang/lib/Serialization/: ASTReader.cpp
clang/test/Driver/: sycl-actypes.cpp
clang/test/Misc/: pragma-attribute-supported-attributes-list.test
clang/tools/driver/: CMakeLists.txt
llvm/cmake/modules/: HandleLLVMOptions.cmake
llvm/lib/Analysis/: VectorUtils.cpp
llvm/lib/Passes/: CMakeLists.txt  PassBuilder.cpp  PassBuilderPipelines.cpp  PassRegistry.def
llvm/lib/Transforms/: CMakeLists.txt
llvm/tools/bugpoint/: CMakeLists.txt
llvm/tools/opt/: CMakeLists.txt
opencl-intel/: CMakeLists.txt
opencl-intel/FrontendDriver/: CMakeLists.txt  Compile.cpp  FrontendDriver.cpp  FrontendDriver.h  Link.cpp  ParseSPIRV.cpp  SPIRMaterializer.cpp
opencl-intel/backend/: CMakeLists.txt
opencl-intel/backend/libraries/: CMakeLists.txt
opencl-intel/cl_api/: ICLDevBackendKernel.h  ICLDevBackendOptions.h  cl_device_api.h  cl_types.h  cpu_dev_limits.h  frontend_api.h  ocl_supported_extensions.h  opencl_c_features.h  task_executor.h
opencl-intel/cmake/: AddOpenCL.cmake  AddOpenCLClang.cmake  CMakeFuncs.cmake  CMake_linux_tools.cmake  CMake_windows_tools.cmake  cl_config.in
opencl-intel/devices/: CMakeLists.txt
opencl-intel/doc/: cpu_runtime_testing.rst
opencl-intel/framework/: CMakeLists.txt  UserLoggerOutputParams.h  cl_framework.cpp  cl_framework.h  cl_framework_linux_exports.txt  framework_proxy.cpp  intelocl.def
opencl-intel/tests/: CMakeLists.txt  lit.cfg  lit.site.cfg.in
opencl-intel/tests/tbb_native_test_type/: CMakeLists.txt
opencl-intel/utils/: CMakeLists.txt
sycl/: CMakeLists.txt
(+1008 files in other folders)
